boulder/tests/compile_fail/attr/test_attr.bo
# Attribute `test` used more than once
# (5:
# (6:

@test
@test
fn test() -> Bool {
    True
}